<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FitnessTracker</string>
    <string name="nav_header_subtitle">Authors: \tJakub Romańczyk, \n\tMarcin Wojciechowski</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="overview_fragment">Overview</string>
    <string name="weight_fragment">WeightTracker</string>
    <string name="navbartitle">Menu</string>
    <string name="exercise_fragment">ExerciseTracker</string>
    <string name="add_weight">Add weight:</string>
    <string name="modify_weight">Change value:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no_data">There is no data to display!\nConsider adding your weight\n via \'+\' button below!</string>
</resources>
