<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/navbartitle">
            <menu>
                <item
                        android:id="@+id/overview_fragment"
                        android:icon="@drawable/ic_overview"
                        android:title="@string/overview_fragment"/>
                <item
                        android:id="@+id/weight_fragment"
                        android:icon="@drawable/ic_weight"
                        android:title="@string/weight_fragment"/>
                <item
                        android:id="@+id/exercise_fragment"
                        android:icon="@drawable/ic_fitness_center_black_24dp"
                        android:title="@string/exercise_fragment"/>
            </menu>
        </item>
    </group>


</menu>
